Added Controllers, Models and Repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=cinema-reservation-app
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/cinema_db
+spring.datasource.username=postgres
+spring.datasource.password=000001
+
+spring.sql.init.mode=always
+
+logging.level.com.quak.cinema_reservation_app=DEBUG
