Fixed github action script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy to Production
 
 on:
   push:
-    branches: [ "main" ]  # Runs on every push to main
-  workflow_dispatch:      # Allows you to run it manually from the Actions tab
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -18,10 +18,7 @@ jobs:
           port: 22
           script: |
             cd ~/Projects/movie-reservation-backend
-
             git pull origin main
-
             docker compose down
             docker compose up -d --build
-
             docker image prune -f
