--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           port: 22
           script: |
             cd ~/Projects/movie-reservation-backend
-            git pull origin main
+            git pull
             docker compose down
             docker compose up -d --build
             docker image prune -f
